// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TapStack Integration Tests Stack Configuration and Synthesis TapStack should instantiate with custom props and match snapshot 1`] = `
"{
  "output": {
    "databaseSecretArn": {
      "description": "The ARN of the secret containing the RDS password.",
      "sensitive": true,
      "value": "mock-secret-arn"
    },
    "ec2InstanceId": {
      "description": "The ID of the EC2 instance.",
      "value": "mock-instance-id"
    },
    "ec2PublicIp": {
      "description": "The public IP address of the EC2 instance.",
      "value": "mock-public-ip"
    },
    "privateSubnetId": {
      "description": "The ID of the private subnet.",
      "value": "mock-private-subnet-id"
    },
    "publicSubnetId": {
      "description": "The ID of the public subnet.",
      "value": "mock-public-subnet-id"
    },
    "rdsInstanceEndpoint": {
      "description": "The connection endpoint for the RDS database instance.",
      "sensitive": true,
      "value": "mock-rds-endpoint"
    },
    "vpcId": {
      "description": "The ID of the main VPC.",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
          {
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "TAP"
            }
          }
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "my-custom-state-bucket",
        "encrypt": true,
        "key": "prod/TestCustomStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;

exports[`TapStack Integration Tests Stack Configuration and Synthesis TapStack should instantiate with default props and match snapshot 1`] = `
"{
  "output": {
    "databaseSecretArn": {
      "description": "The ARN of the secret containing the RDS password.",
      "sensitive": true,
      "value": "mock-secret-arn"
    },
    "ec2InstanceId": {
      "description": "The ID of the EC2 instance.",
      "value": "mock-instance-id"
    },
    "ec2PublicIp": {
      "description": "The public IP address of the EC2 instance.",
      "value": "mock-public-ip"
    },
    "privateSubnetId": {
      "description": "The ID of the private subnet.",
      "value": "mock-private-subnet-id"
    },
    "publicSubnetId": {
      "description": "The ID of the public subnet.",
      "value": "mock-public-subnet-id"
    },
    "rdsInstanceEndpoint": {
      "description": "The connection endpoint for the RDS database instance.",
      "sensitive": true,
      "value": "mock-rds-endpoint"
    },
    "vpcId": {
      "description": "The ID of the main VPC.",
      "value": "mock-vpc-id"
    }
  },
  "provider": {
    "aws": [
      {
        "default_tags": [
        ],
        "region": "us-west-2"
      }
    ]
  },
  "terraform": {
    "backend": {
      "s3": {
        "bucket": "iac-rlhf-tf-states",
        "encrypt": true,
        "key": "dev/TestDefaultStack.tfstate",
        "region": "us-east-1",
        "use_lockfile": true
      }
    },
    "required_providers": {
      "aws": {
        "source": "aws",
        "version": "6.4.0"
      }
    }
  }
}"
`;
